--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "ng2-ace-editor": "^0.3.8",
+    "ngx-json-viewer": "^2.3.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
